# wheelbipe_ros2_sim2sim

./: .gitignore  ARCHITECTURE_ANALYSIS.md  README.md
src/controllers/template_ros2_controller/: CMakeLists.txt  ONNXRUNTIME_SETUP.md  package.xml  template_ros2_controller_plugin.xml
src/controllers/template_ros2_controller/config/: template_ros2_controller_parameters.yaml
src/controllers/template_ros2_controller/include/controller_modules/: PIDmethod.h  Upper_Public.h
src/controllers/template_ros2_controller/include/fsm/: state_base.hpp  state_machine.hpp
src/controllers/template_ros2_controller/include/fsm/states/: state_emergency_stop.hpp  state_error.hpp  state_idle.hpp  state_init.hpp  state_rl.hpp  state_running.hpp  state_standing.hpp  state_walking.hpp
src/controllers/template_ros2_controller/include/onnxruntime_cuda/: onnxruntime_inference.hpp
src/controllers/template_ros2_controller/include/robot_state/: robot_state.hpp
src/controllers/template_ros2_controller/include/template_ros2_controller/: template_ros2_controller.hpp
src/controllers/template_ros2_controller/include/tensorrt_cuda/: tensorrt_inference.hpp
src/controllers/template_ros2_controller/include/utils/: MathUtilities.h  cTypes.h  cppTypes.h  orientation_tools.h
src/controllers/template_ros2_controller/policy/parallel/: model_gn.engine
src/controllers/template_ros2_controller/policy/serial/: jump.engine  model_gn.engine  policy.engine
src/controllers/template_ros2_controller/src/: template_ros2_controller.cpp
src/controllers/template_ros2_controller/src/controller_modules/: PIDmethod.cpp
src/controllers/template_ros2_controller/src/fsm/: state_base.cpp  state_emergency_stop.cpp  state_error.cpp  state_idle.cpp  state_init.cpp  state_machine.cpp  state_rl.cpp  state_running.cpp  state_standing.cpp  state_walking.cpp
src/controllers/template_ros2_controller/src/fsm/states/: state_emergency_stop.cpp  state_error.cpp  state_idle.cpp  state_init.cpp  state_rl.cpp  state_running.cpp  state_standing.cpp  state_walking.cpp
src/controllers/template_ros2_controller/src/onnxruntime_cuda/: onnxruntime_inference.cpp
src/controllers/template_ros2_controller/src/robot_state/: robot_state.cpp
src/controllers/template_ros2_controller/src/tensorrt_cuda/: tensorrt_inference.cpp
src/interfaces/webots_bridge/: CMakeLists.txt  package.xml  webots_bridge_plugin.xml
src/interfaces/webots_bridge/include/webots_bridge/: webots_bridge_node.hpp
src/interfaces/webots_bridge/launch/: webots_bridge.launch.py
src/interfaces/webots_bridge/src/: webots_bridge_node.cpp
src/middlewares/template_middleware/: CMakeLists.txt  package.xml
src/middlewares/template_middleware/config/: wheelbipe25_v3.yaml  wheelbipe25_v3_serial.yaml
src/middlewares/template_middleware/launch/: template_bring_up.launch.py
src/resources/robot_descriptions/: CMakeLists.txt  package.xml
src/resources/robot_descriptions/wheelbipe25_v3/meshes/: left_front1_link.STL  left_front2_link.STL  left_front3_link.STL  left_front4_link.STL  left_rear1_link.STL  left_rear2_link.STL  left_spring1_link.STL  left_spring2_link.STL  left_wheel_link.STL  right_front1_link.STL  right_front2_link.STL  right_front3_link.STL  right_front4_link.STL  right_rear1_link.STL  right_rear2_link.STL  right_spring1_link.STL  right_spring2_link.STL  right_wheel_link.STL
src/resources/robot_descriptions/wheelbipe25_v3/urdf/: wheelbipe25_v3.urdf
src/resources/robot_descriptions/wheelbipe25_v3/worlds/: .wheelbipe25_v3.wbproj  wheelbipe25_v3.wbt  wheelbipe25_v3_origin.wbt  wheelbipe25_v3_simple1.wbt  wheelbipe25_v3_simple2.wbt
src/resources/robot_descriptions/wheelbipe25_v3/xacro/: description.xacro  robot_sim.xacro  ros2control.xacro
src/resources/robot_descriptions/wheelbipe25_v3_serial/meshes/: left_guide_link.STL  left_rear1_link.STL  left_rear2_link.STL  left_wheel_link.STL  right_guide_link.STL  right_rear1_link.STL  right_rear2_link.STL  right_wheel_link.STL
src/resources/robot_descriptions/wheelbipe25_v3_serial/urdf/: wheelbipe25_v3_serial.urdf
src/resources/robot_descriptions/wheelbipe25_v3_serial/worlds/: .wheelbipe25_v3_serial.wbproj  wheelbipe25_v3_serial origin.wbt  wheelbipe25_v3_serial.wbt
src/resources/robot_descriptions/wheelbipe25_v3_serial/xacro/: description.xacro  display.xacro  robot.xacro  ros2control.xacro
src/tools/keyboard_teleop/: CMakeLists.txt  README.md  package.xml
src/tools/keyboard_teleop/config/: keyboard_teleop_params.yaml
src/tools/keyboard_teleop/launch/: keyboard_teleop.launch.py
src/tools/keyboard_teleop/src/: keyboard_teleop_node.cpp
src/tools/onnx_to_tensorrt/: CMakeLists.txt  package.xml
src/tools/onnx_to_tensorrt/src/: onnx_to_engine.cpp
